# developer-multi-agent-platform

./: .env.example  .gitignore  CLADUE.md  CLAUDE.ko.md  Dockerfile  Makefile  README.md  frontend-prd.json  prd.json  pyproject.toml
docs/: adr-0001-manager-pattern.md  agent-skill-drafts.md  api-spec.md  current-state-functional-technical-spec.md  frontend-ia-implementation-plan-v1.md  frontend-phase0-1-backlog.md  frontend-phase1-release-checklist.md  frontend-phase2-release-checklist.md  frontend-prd-ralph-v1.md  frontend-prd-v1.md  mvp-schedule.md  openapi.yaml  prd-ai-rewrite-dev-review.md  prd-ai-rewrite-v1.md  prd-implementation-check.md  prd-ralph-phase0-1-backlog.md  prd-ralph-v1.md  prd.md  system-architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: errors.ts  feedback.ts  health.ts  http.ts  workflows.ts
frontend/src/app/: router.tsx
frontend/src/routes/: HealthRoute.tsx  RunDetailRoute.tsx  RunTraceRoute.tsx  (+1 more)
prompts/: implementation.md  orchestrator.md  repo_context.md  requirements.md  review.md  test_strategy.md
scripts/: phase1_gate.py
skills/implementation-planner/: SKILL.md
skills/repo-context-finder/: SKILL.md
skills/requirements-planner/: SKILL.md
skills/review-gate/: SKILL.md
skills/test-strategy-generator/: SKILL.md
skills/workflow-orchestrator/: SKILL.md
src/app/: main.py
tests/: conftest.py  test_auth_config.py  test_auth_providers.py  test_connectors.py  test_health.py  test_workflows.py
tests/fixtures/: connector_error_cases.json
(+75 files in other folders)
